<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@color/light_blue"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.shrutihiray.chip.Next2Activity">

    <TextView android:text="@string/title" android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="40dp"/>



    <TextView android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="40dp"/>



    <Button
        android:id="@+id/search"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:text="@string/find"
        android:textSize="20sp"
        android:onClick="See signal strength"
        />
    <Button
        android:id="@+id/find"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginTop="350dp"
        android:layout_centerHorizontal="true"
        android:text="@string/search"
        android:textSize="25sp"
        android:onClick="FindClicked"
        />


</RelativeLayout>
